--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "prod": "prisma migrate deploy && node dist/server.js",
+    "prod": " node dist/server.js",
     "build": "tsc",
     "start": "node dist/server.js"
   },
